fix: contrast

--- a/src/components/Board/BoardLayout.css
+++ b/src/components/Board/BoardLayout.css
@@ -22,7 +22,7 @@
 .Board__navbar {
   height: 3em;
   /* TODO: colors not here */
-  background: #222;
+  background: #444;
   color: #fff;
 }
 
